src/promql/parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Start: peg$parseStart,
  };
  let peg$startRuleFunction = peg$parseStart;

  const peg$c0 = "^";
  const peg$c1 = "[";
  const peg$c2 = "]";
  const peg$c3 = "(";
  const peg$c4 = ")";
  const peg$c5 = ",";
  const peg$c6 = "{";
  const peg$c7 = "}";
  const peg$c8 = ":";
  const peg$c9 = "${";
  const peg$c10 = "$";
  const peg$c11 = "\"";
  const peg$c12 = "'";
  const peg$c13 = "\\";
  const peg$c14 = "0x";
  const peg$c15 = ".";
  const peg$c16 = "or";
  const peg$c17 = "unless";
  const peg$c18 = "and";
  const peg$c19 = "==";
  const peg$c20 = "!=";
  const peg$c21 = "<=";
  const peg$c22 = ">=";
  const peg$c23 = "=~";
  const peg$c24 = "!~";
  const peg$c25 = "=";
  const peg$c26 = "bool";
  const peg$c27 = "on";
  const peg$c28 = "ignoring";
  const peg$c29 = "group_left";
  const peg$c30 = "group_right";
  const peg$c31 = "by";
  const peg$c32 = "without";
  const peg$c33 = "count_values";
  const peg$c34 = "bottomk";
  const peg$c35 = "quantile";
  const peg$c36 = "stddev";
  const peg$c37 = "stdvar";
  const peg$c38 = "count";
  const peg$c39 = "group";
  const peg$c40 = "topk";
  const peg$c41 = "sum";
  const peg$c42 = "min";
  const peg$c43 = "max";
  const peg$c44 = "avg";
  const peg$c45 = "ms";
  const peg$c46 = "#";

  const peg$r0 = /^[+\-]/;
  const peg$r1 = /^[0-9]/;
  const peg$r2 = /^["$]/;
  const peg$r3 = /^[$']/;
  const peg$r4 = /^[0-9a-fA-F]/;
  const peg$r5 = /^[eE]/;
  const peg$r6 = /^[<>]/;
  const peg$r7 = /^[%*\/]/;
  const peg$r8 = /^[dhmswy]/;
  const peg$r9 = /^[A-Za-z_:]/;
  const peg$r10 = /^[A-Za-z0-9_:]/;
  const peg$r11 = /^[A-Za-z_]/;
  const peg$r12 = /^[A-Za-z0-9_]/;
  const peg$r13 = /^[ \t\n\r]/;
  const peg$r14 = /^[\n\r]/;

  const peg$e0 = peg$literalExpectation("^", false);
  const peg$e1 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e2 = peg$literalExpectation("[", false);
  const peg$e3 = peg$literalExpectation("]", false);
  const peg$e4 = peg$literalExpectation("(", false);
  const peg$e5 = peg$literalExpectation(")", false);
  const peg$e6 = peg$literalExpectation(",", false);
  const peg$e7 = peg$literalExpectation("{", false);
  const peg$e8 = peg$literalExpectation("}", false);
  const peg$e9 = peg$literalExpectation(":", false);
  const peg$e10 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e11 = peg$literalExpectation("${", false);
  const peg$e12 = peg$literalExpectation("$", false);
  const peg$e13 = peg$literalExpectation("\"", false);
  const peg$e14 = peg$literalExpectation("'", false);
  const peg$e15 = peg$literalExpectation("\\", false);
  const peg$e16 = peg$anyExpectation();
  const peg$e17 = peg$classExpectation(["\"", "$"], false, false, false);
  const peg$e18 = peg$classExpectation(["$", "'"], false, false, false);
  const peg$e19 = peg$literalExpectation("0x", false);
  const peg$e20 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false, false);
  const peg$e21 = peg$literalExpectation(".", false);
  const peg$e22 = peg$classExpectation(["e", "E"], false, false, false);
  const peg$e23 = peg$literalExpectation("or", false);
  const peg$e24 = peg$literalExpectation("unless", false);
  const peg$e25 = peg$literalExpectation("and", false);
  const peg$e26 = peg$literalExpectation("==", false);
  const peg$e27 = peg$literalExpectation("!=", false);
  const peg$e28 = peg$literalExpectation("<=", false);
  const peg$e29 = peg$literalExpectation(">=", false);
  const peg$e30 = peg$classExpectation(["<", ">"], false, false, false);
  const peg$e31 = peg$classExpectation(["%", "*", "/"], false, false, false);
  const peg$e32 = peg$literalExpectation("=~", false);
  const peg$e33 = peg$literalExpectation("!~", false);
  const peg$e34 = peg$literalExpectation("=", false);
  const peg$e35 = peg$literalExpectation("bool", false);
  const peg$e36 = peg$literalExpectation("on", false);
  const peg$e37 = peg$literalExpectation("ignoring", false);
  const peg$e38 = peg$literalExpectation("group_left", false);
  const peg$e39 = peg$literalExpectation("group_right", false);
  const peg$e40 = peg$literalExpectation("by", false);
  const peg$e41 = peg$literalExpectation("without", false);
  const peg$e42 = peg$literalExpectation("count_values", false);
  const peg$e43 = peg$literalExpectation("bottomk", false);
  const peg$e44 = peg$literalExpectation("quantile", false);
  const peg$e45 = peg$literalExpectation("stddev", false);
  const peg$e46 = peg$literalExpectation("stdvar", false);
  const peg$e47 = peg$literalExpectation("count", false);
  const peg$e48 = peg$literalExpectation("group", false);
  const peg$e49 = peg$literalExpectation("topk", false);
  const peg$e50 = peg$literalExpectation("sum", false);
  const peg$e51 = peg$literalExpectation("min", false);
  const peg$e52 = peg$literalExpectation("max", false);
  const peg$e53 = peg$literalExpectation("avg", false);
  const peg$e54 = peg$literalExpectation("ms", false);
  const peg$e55 = peg$classExpectation(["d", "h", "m", "s", "w", "y"], false, false, false);
  const peg$e56 = peg$classExpectation([["A", "Z"], ["a", "z"], "_", ":"], false, false, false);
  const peg$e57 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_", ":"], false, false, false);
  const peg$e58 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false, false);
  const peg$e59 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false, false);
  const peg$e60 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);
  const peg$e61 = peg$literalExpectation("#", false);
  const peg$e62 = peg$classExpectation(["\n", "\r"], false, false, false);

  function peg$f0(expr) {    return expr;  }
  function peg$f1(head, operator, vectorMatching, right) {
    return { operator, vectorMatching, right };
  }
  function peg$f2(head, tail) {
    return foldBinary(head, tail);
  }
  function peg$f3(head, operator, vectorMatching, right) {
    return { operator, vectorMatching, right };
  }
  function peg$f4(head, tail) {
    return foldBinary(head, tail);
  }
  function peg$f5(head, operator, vectorMatching, right) {
    return { operator, vectorMatching, right };
  }
  function peg$f6(head, tail) {
    return foldBinary(head, tail);
  }
  function peg$f7(head, operator, vectorMatching, right) {
    return { operator, vectorMatching, right };
  }
  function peg$f8(head, tail) {
    return foldBinary(head, tail);
  }
  function peg$f9(head, operator, vectorMatching, right) {
    return { operator, vectorMatching, right };
  }
  function peg$f10(head, tail) {
    return foldBinary(head, tail);
  }
  function peg$f11(left, operator, vectorMatching, right) {
    return { type: "BinaryExpression", operator, left, right, vectorMatching: vectorMatching || undefined };
  }
  function peg$f12(operator, argument) {    return { type: "UnaryExpression", operator, argument };  }
  function peg$f13(primary, range, resolution) {
    if (resolution) return { type: "SubqueryExpression", expression: primary, range, resolution };
    if (primary.type !== "VectorSelector") error("Range selector can only follow a vector selector");
    return { type: "MatrixSelector", vector: primary, range };
  }
  function peg$f14(expression) {    return { type: "ParenthesizedExpression", expression };  }
  function peg$f15(operator, groupingBefore, args, groupingAfter) {
    return { type: "AggregateExpression", operator, arguments: args || [], grouping: groupingBefore || groupingAfter || undefined };
  }
  function peg$f16(callee, args) {    return { type: "CallExpression", callee, arguments: args || [] };  }
  function peg$f17(callee, args) {    return { type: "TemplateCallExpression", callee, arguments: args || [] };  }
  function peg$f18(head, next) {    return next;  }
  function peg$f19(head, tail) {
    return [head, ...tail];
  }
  function peg$f20(head, next) {    return next;  }
  function peg$f21(head, tail) {
    return [head, ...tail];
  }
  function peg$f22(metricName, matchers) {    return { type: "VectorSelector", metricName: metricName || undefined, matchers };  }
  function peg$f23(metricName) {    return { type: "VectorSelector", metricName, matchers: [] };  }
  function peg$f24(items) {    return items || [];  }
  function peg$f25(head, next) {    return next;  }
  function peg$f26(head, tail) {
    return [head, ...tail];
  }
  function peg$f27(label, operator, value) {
    return { type: "LabelMatcher", label, operator, value };
  }
  function peg$f28(modifier, labels) {    return { type: "AggregateGrouping", modifier, labels };  }
  function peg$f29(labels) {    return labels || [];  }
  function peg$f30(head, next) {    return next;  }
  function peg$f31(head, tail) {
    return [head, ...tail];
  }
  function peg$f32(parts) {    return combineVectorMatching(parts);  }
  function peg$f33() {    return { type: "bool" };  }
  function peg$f34(operator, labels) {    return { type: "matching", operator, labels };  }
  function peg$f35(operator, labels) {
    return { type: "group", operator, labels: labels || [] };
  }
  function peg$f36(resolution) {    return resolution;  }
  function peg$f37(parts) {    return makeDuration(parts, text());  }
  function peg$f38(value, unit) {
    return { type: "DurationPart", value: Number.parseInt(value, 10), unit, raw: text() };
  }
  function peg$f39(raw) {    return makeTemplateRef(raw, true);  }
  function peg$f40(raw) {    return makeTemplateRef(raw, false);  }
  function peg$f41(parts) {    return { raw: text(), parts };  }
  function peg$f42(value) {    return makeString('"', value.parts, value.raw);  }
  function peg$f43(parts) {    return { raw: text(), parts };  }
  function peg$f44(value) {    return makeString("'", value.parts, value.raw);  }
  function peg$f45(call) {    return call;  }
  function peg$f46(ref) {    return ref;  }
  function peg$f47(raw) {    return { type: "StringText", raw, value: raw };  }
  function peg$f48(call) {    return call;  }
  function peg$f49(ref) {    return ref;  }
  function peg$f50(raw) {    return { type: "StringText", raw, value: raw };  }
  function peg$f51(raw) {
    return { type: "NumberLiteral", raw, value: Number(raw) };
  }
  function peg$f52(operator) {    return operator;  }
  function peg$f53(operator) {    return operator;  }
  function peg$f54(operator) {    return operator;  }
  function peg$f55(operator) {    return operator;  }
  function peg$f56(operator) {    return operator;  }
  function peg$f57(operator) {    return operator;  }
  function peg$f58(keyword) {    return keyword;  }
  function peg$f59(keyword) {    return keyword;  }
  function peg$f60(keyword) {    return keyword;  }
  function peg$f61(operator) {    return operator;  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseOrExpr();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseEOF();
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f0(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseOrExpr() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseAndExpr();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      s5 = peg$parseOrOperator();
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s7 = peg$parseVectorMatching();
        if (s7 === peg$FAILED) {
          s7 = null;
        }
        s8 = peg$parseAndExpr();
        if (s8 !== peg$FAILED) {
          peg$savedPos = s3;
          s3 = peg$f1(s1, s5, s7, s8);
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        s5 = peg$parseOrOperator();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s7 = peg$parseVectorMatching();
          if (s7 === peg$FAILED) {
            s7 = null;
          }
          s8 = peg$parseAndExpr();
          if (s8 !== peg$FAILED) {
            peg$savedPos = s3;
            s3 = peg$f1(s1, s5, s7, s8);
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f2(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseAndExpr() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseCompareExpr();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      s5 = peg$parseAndOperator();
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s7 = peg$parseVectorMatching();
        if (s7 === peg$FAILED) {
          s7 = null;
        }
        s8 = peg$parseCompareExpr();
        if (s8 !== peg$FAILED) {
          peg$savedPos = s3;
          s3 = peg$f3(s1, s5, s7, s8);
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        s5 = peg$parseAndOperator();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s7 = peg$parseVectorMatching();
          if (s7 === peg$FAILED) {
            s7 = null;
          }
          s8 = peg$parseCompareExpr();
          if (s8 !== peg$FAILED) {
            peg$savedPos = s3;
            s3 = peg$f3(s1, s5, s7, s8);
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f4(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseCompareExpr() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8;
